# snaplet

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  pyproject.toml
.github/workflows/: pubish.yml  stale.yml  test.yml
.zed/: settings.json
src/snaplet/: __init__.py  _version.py  base.py  field.py  list.py  meta.py
tests/: test_benchmark.py  test_export.py  test_performance.py  test_property_alias.py
