[project]
name = "snaplet"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AmaseCocoa", email = "cocoa@amase.cc" }
]
requires-python = ">=3.10"
dependencies = [
    "orjson>=3.11.7",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.hooks.vcs]
version-file = "src/snaplet/_version.py"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
]
