[project]
name = "snaplet"
dynamic = ["version"]
description = "Faster JSON Mapping with Just-In-Time codegen"
readme = "README.md"
authors = [
    { name = "AmaseCocoa", email = "cocoa@amase.cc" }
]
requires-python = ">=3.10"
dependencies = [
    "orjson>=3.11.7",
]
license = { file = "LICENSE" }
keywords = ["json", "mapping", "jit", "performance", "dataclass"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/AmaseCocoa/snaplet"
Repository = "https://github.com/AmaseCocoa/snaplet"
Issues = "https://github.com/AmaseCocoa/snaplet/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.hooks.vcs]
version-file = "src/snaplet/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/snaplet"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.15.4",
    "ty>=0.0.19", 
]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]
exclude = [
    ".git",
    "build",
    "dist",
    ".venv",
    "src/snaplet/_version.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RET"]
ignore = ["A003"]